users now have access to old orders and all their shops (if they are the shop founders) fixed bug i created in mistake - checked login for actions that could be performed by guests